<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha=".95"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".activities.UserRegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_registro1"
        android:textColor="#A3999D"
        android:textSize="35dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textAlignment="center"
        android:layout_marginTop="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        >

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/logo_login2"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_UserName_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/string_nombre"
        android:textColor="#A3999D"
        android:textColorHint="#A3999D"
        android:textSize="16dp"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/edit_UserPass_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:background="#11000000"
        android:hint="@string/string_pass"
        android:drawableLeft="@drawable/ic_action_pass"
        android:layout_alignLeft="@id/edit_UserName"
        android:layout_alignStart="@id/edit_UserName"
        android:textColor="#A3999D"
        android:textColorHint="#A3999D"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/edit_UserPassConfirm"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:background="#11000000"
        android:hint="@string/string_confirmar_pass"
        android:drawableLeft="@drawable/ic_action_pass"
        android:layout_alignLeft="@id/edit_UserName"
        android:layout_alignStart="@id/edit_UserName"
        android:textColor="#A3999D"
        android:textColorHint="#A3999D"
        android:layout_marginBottom="60dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_login_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/string_registro1"
                android:textColor="#fff"
                android:textSize="18dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>