<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Fragments.Menu">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:orientation="vertical"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="@drawable/bg_header1"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-60dp"
            android:background="@drawable/bgmenus"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_mainmenu"
                android:textSize="17dp"
                android:textColor="#818181"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="14dp"
                />

            <LinearLayout
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/btn_teams"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_marginBottom="8dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/football_team"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#172646"
                        android:textSize="16sp"
                        android:text="@string/string_team"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_fixture"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_marginBottom="8dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/logo_fixture"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#172646"
                        android:textSize="16sp"
                        android:text="@string/string_fixture"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>